--- a/Portfolio/portfolio.css
+++ b/Portfolio/portfolio.css
@@ -1,46 +1,103 @@
-body {
-    margin: 0%;
+html{
+    scroll-behavior: smooth;
 }
 
+body {
+    margin: 0%; /*ensures site displays all the way to edge of browser screen*/
+        opacity: 1;/*this and transition affect the page loading fade in effect*/
+        transition: 5s opacity; /*causes 5 second fade in*/
+    letter-spacing: .3vw;
+    font-family: 'Krona One', sans-serif;
+    font-size: 2vw
+}
+
+
+/*contributes to fade out effect for page upon load*/
+body.fade-out {
+    opacity: .1; /*happens at start of page load*/
+    transition: none;
+}
 
 /*Navbar*/
 .Navbar {
-    overflow: hidden;
-    background-color: #000;
+    overflow: hidden; 
+    background-color: rgb(71, 48, 48);
     position: fixed;
-    top: 0;
-    width: 100%;
-    z-index: 1;
+    top: 0;/*Eliminates space display above navbar*/
+    width: 100%; /*makes navbar span entire width of page*/
+    z-index: 1; /*ensures other elements don't display over navbar*/
+        position: fixed;
+    -webkit-animation: moveNav 5s; /*Safari 4.0 - 8.0*/
+        animation: moveNav 5s;
 }
 
+/*navbar text*/
 .Navbar a{
     float: left;
     display: block;
     color: #84a3a3;
-    padding: 14px 16px;
+    padding: .75vw 1vw;
     text-decoration: none;
-    font-family: Avant Garde, Helvetica;
-    font-size: 20px;
+    font-family: 'Krona One', sans-serif;
+    font-size: 2vw;
     text-align: center;
+        position: relative;
+    -webkit-animation: movenavText 5.75s;
+        animation: movenavText 5.75s;
+        letter-spacing: 1vw;
 }
 
+/*slides nav bar in from above/top of page upon page load*/
+@keyframes moveNav {
+    from {left: -100vw;}
+    to {left: 0vw;}
+}
+
+@keyframes movenavText {
+    from {top: -100vw;}
+    to {top: 0vw;}
+}
+
+/*slides overlay video text up from bottom upon page load*/
+@keyframes movevideoText{
+    from {top: -100vw;}
+    to {top: 0px;}
+}
+
+/*navbar hover effect*/
 .Navbar a:hover {
-    background-color: #84a3a3;
-    color: #373a3a;
+    background-color: #98bdbd;
+    color: #425050;
     font-weight: bold;
+    cursor: pointer;
+    -webkit-transition-duration: 1s;
+    transition-duration: 1s;
 }
 
+/*navbar home button*/
 .Navbar a.active {
-    background-color: #408585;
+    background-color: #3e5a5a;
+}
+
+/*zooms video out from zoomed in position upon page load*/
+@keyframes zoominoutsinglefeatured {
+    0% {
+        transform: scale(1.5, 1.5);
+    }
+    100% {
+        transform: scale(1,1);
+    }
 }
 
 /*Video*/
 #code_Video {
     position: fixed;
-    right: 0;
-    bottom: 0;
-    min-width: 100%;
+    right: 0; /*ensures no space between video edge and top edge of page*/
+    bottom: 0; /*ensures no space between video edge and top edge of page*/
+    min-height: 100%; /*displays video across full height of page*/
+    top: 0;
     z-index: -1;
+    animation: zoominoutsinglefeatured 5s;
 }
 
 /*Text overlay on video*/
@@ -48,51 +105,163 @@ body {
     background: rgba(0, 0, 0, 0.5);
     color: #84a3a3;
     width: 100%;
-    padding: 20px;
+    padding-top: .1vh;
+    padding-bottom: 1vh;
     margin-top: 23%;
+        position: relative;
+    -webkit-animation: moveNav 4s; /*Safari 4.0 - 8.0*/
+        animation: movevideoText 4s;
+}
+
+/*Slideshow Styling*/
+#Slideshow_Background {
+    background: rgba(255,255,255, 0.35);/* slightly transparent white backgound over video*/
+}
+
+.mySlides {
+    display: none;
+}
+
+@-webkit-keyframes fade {
+    from {opacity: .4}
+    to {opacity: 1}
+}
+
+@keyframes fade {
+    from {opacity: .4}
+    to {opacity: 1}
+}
+
+/*Slideshow section/container */
+#Slideshow_Container {
+    width: 39.5vw;
+    height: auto;
+    padding-top: 4%;
+    position: relative;
+    margin: auto;
+}
+
+/*slideshow images*/
+.Slide_Show_Images {
+    vertical-align: middle;
+    height: auto;
+    box-shadow: 0px 5px 10px 12px rgba(0, 0, 0, .75);
+    width: auto;
+}
+
+/*Next and previous buttons*/
+.Previous, .Next {
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    width: auto;
+    padding: 2vw;
+    margin-top: -0vw;
+    color: darkgray;
+    font-weight: bold;
+    font-size: 1.5vw;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+    transition: 0.6s ease;
+}
+
+/*positioning right-hand next button*/
+.Next {
+    right: 0;
+    border-radius: 3px 0 0 3px;
+}
+
+/*Hover effect on slide show buttons*/
+.Previous:hover, .Next:hover {
+    background-color: rgba(0, 0, 0, 0.8s);
+    color: white;
+}
+
+/*slideshow text*/
+
+.text {
+color: white;
+padding: 2vw;
+position: absolute;
+bottom: 0;
+width: 100%;
+text-align: center;
+font-family: 'Krona One', sans-serif;
+letter-spacing: .1vw;
+font-size: 2vw;
+background-color:rgba(0, 0, 0, 0.75);
+font-weight: bold;
+border-radius: 7px 7px 7px 7px;
+}
+
+/*Number text(1/6 ,2/6, etc.)- display set to none, so the numbers are hidden*/
+.Slide_Number {
+    color: white;
+    position: absolute;
+    top: 0;
+    font-family: 'Krona One', sans-serif;
+    letter-spacing: .1vw;
+    font-style: 1.5vw;
+    font-weight: bold;
+    display: none;
+}
+
+/*Dots under the slideshow*/
+.dot {
+    cursor: pointer;
+    height: 1vw;
+    width: 1vw;
+    margin: .25vw;
+    background-color: white;
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.6s ease;
+    position: relative;
+    z-index: 1;
+}
+
+/*dots' hover*/
+.active, .dot:hover {
+    background-color: black;
+}
+
+/*slideshow animation fade*/
+.fade {
+    -webkit-animation-name: fade;
+    -webkit-animation-duration: 1.5s;
+    animation-name: fade;
+    animation-duration: 1.5s;
 }
 
 /*table and column style*/
-* {
-    box-sizing: border-box;
+* { /* The asterisk is a universal selector that appiles this effect to all elements on the page*/
+    box-sizing: border-box; /*creates a box with a border where most of the text will be*/
 }
 
 .Column_1 {
     float: left;
     width: 50%;
-    padding: 10px;
-    padding-top: 3%;
-    height: 400px;
+    padding: 1.6%;
     background-color: #f2f2f2;
+    height: 448px;
 }
 
 .Column_2 {
     float: left;
     width: 50%;
-    padding: 10px;
-    padding-top: 1.9%;
-    height: 400px;
+    padding: 1.6%;
+    height: 448px;
     background-color: #2f7474;
 }
 
-.Column_3 {
-    float: left;
-    width: 50%;
-    padding: 10px;
-    padding-top: 3.5%;
-    height:450px;
-    background-color: #9ee2e2;
-}
 
-
-.Row:after {
+.Row:after { 
     content: "";
     display: table;
     clear: both;
 }
 
 /*h1 element*/
-
 h1 {
     text-transform: uppercase;
     font-family: "Trebuchet MS", Optima;
@@ -103,24 +272,24 @@ h1 {
 
 /*P elements*/
 p {
-    color: #408585;
-    font-family: Verdana, Geneva, Tahoma, sans-serif bold;
+    font-family: 'Krona One', sans-serif;
     text-align: justify;
-    letter-spacing: 1px;
-    font-size: 20px;
-    padding-left: 20px;
-    padding-right: 20px;
+    letter-spacing: .1vw;
+    font-size: 2vw;
+    padding-left: 1vw;
+    padding-right: 1vw;
+    color: floralwhite;
 }
 
 
 /*Center align elements*/
 center {
-    font-family: Verdana, Geneva, Tahoma, sans-serif bold;
+    font-family: 'Krona One', sans-serif;
     text-align: center;
-    letter-spacing: 1px;
-    font-size: 20px;
-    padding-left: 20px;
-    padding-right: 20px;
+    letter-spacing: .1vw;
+    font-size: 2vw;
+    padding-left: 5vw;
+    padding-right: 5vw;
 }
 
 /*anchor elements */
@@ -140,81 +309,133 @@ img {
     border-radius: 8px;
     max-width: 100%;
     height: 340px;
-    margin-left: auto;
-    margin-right: auto;
+    margin: auto auto auto auto;
     display: block;
 }
 
-/*contact form*/
-input[type=text] {
-    width: 100%;
-    padding: 12px;
-    border: 1px inset #cdffff;
-    border-radius: 4px;
-    box-sizing: border-box;
-    margin-top: 6px;
-    margin-bottom: 16px;
-    resize: vertical;
-    font-family: Verdana, Geneva, Tahoma, sans-serif bold;
-}
-
-/*Submit button*/
-input[type=submit] {
-    background-color: #515351;
-    color: #acdbdb;
-    font-weight: bold;
-    padding: 12px 20px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    font-family: Perpetua, Rockwell Extra Bold;
-}
-
-/*Hover effect for submit button*/
-input[type=submit]:hover {
-    background-color: #c0e2e2;
-    color: #061616;
-    font-weight: bold;
-    transform: scale(1.5);
-    transition: transform 1.5s;
-}
-
-/*Form element*/
-form {
-    border-radius: 5px;
-    background-color: #909797;
-    padding: 20px;
-    font-family: "Oswald", sans-serif;
-}
-
-/*center align element hover effect*/
-center:hover {
+/*Center align element hover*/
+center:hover{
     transition: transform 2s;
     transform: scale(1.1);
 }
 
-/*Paragraph element hover effect*/
+/*P element hover*/
 p:hover {
-    color: #84a3a3;
-    transition: transform 1s;
+    color: #00004d;
+        transition: transform 1s;
     transform: scale(1.01);
 }
 
-/*h1 element hover effect*/
+/*H1 hover*/
 h1:hover {
-    color: #408585;
-    font-weight: normal;
+    color: black;
+    font-weight: normal; /*removes bold upon hover*/
 }
 
-/*Image element hover effects*/
+/*Img hover*/
 img:hover {
-    filter: grayscale(5%);
-    transition: transform 1s;
+    filter: grayscale(5%); /*brings back most of the img's color upon hover*/
+        transition: transform 1s;
     transform: scale(1.1);
 }
+
+/*contact form styling*/
+
+/*makes contact form button slide in from right on page load*/ 
+@keyframes movePopup {
+    from {right: -40vw;}
+    to {bottom: 1.75vw;}
+}
+
+/*button to open contact form - fixed at the bottom of the page*/
+.Pop_Up_Button {
+    bottom: 1.75vw;
+    right: 1.75vw;
+    width: 25vw;
+    background-color: white;
+    color: black;
+    border: solid;
+    cursor: pointer;
+    position: fixed;
+    -webkit-animation: movePopup 5s;
+    animation: movePopup 5s;
+}
+
+/*Popup form - hidden by default*/
+.form-popup {
+    border: 3px solid #f0f1f0;
+    z-index: 8;
+    display: none;
+    position: fixed;
+    bottom: 6px;
+    right: 6px;
+}
+
+/*form styling*/
+.form-container {
+    max-width: 49vw;
+    padding: 9px;
+    background-color: white;
+}
+
+/*Input fields*/
+.form-container input[type=text], .form-container input[type=password] {
+    width: 100%;
+    padding: .93vw;
+    margin: .6vw 0 .6vw 0;
+    border: none;
+    background: gainsboro;
+    font-family: 'Krona One', sans-serif;
+    font-size: 1vw;
+}
+
+/*submit button*/
+.form-container .btn {
+    background-color: white;
+    color: black;
+    border-color: black;
+    margin-bottom: 1vh;
+}
+
+/*close button*/
+.form-container .cancel {
+    background-color: black;
+    color: white;
+    border-color: gray;
+}
+
+/*button styling*/
+button {
+    font-family: 'Krona One', sans-serif;
+    letter-spacing: .3vw;
+    font-size: 1.5vw;
+    font-weight: bold;
+    padding: 1.5vw 1.5vw;
+    border-style: solid;
+    cursor: pointer;
+    width: 100%;
+    height: auto;
+}
+
+/*button hover*/
+button:hover, .form-container .btn:hover {
+    color: white;
+    background-color: black;
+    -webkit-transition-duration: 1s;
+    transition-duration: 1s;
+    border-style: solid;
+    border-color: silver;
+}
+.form-container .cancel:hover{
+    color: white;
+    background-color: darkred;
+    -webkit-transition-duration: 1s;
+    transition-duration: 1s;
+    border-style: solid;
+    border-color: black;
+}
+
+
 
 /*Footer element*/
 footer {
